crates/control-plane-api/src/server/public/graphql/publications/snapshots/control_plane_api__server__public__graphql__publications__test__publication_spec_edit_denied.snap
---
source: crates/control-plane-api/src/server/public/graphql/publications/test.rs
expression: response
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 3,
          "line": 3
        }
      ],
      "message": "PermissionDenied: User is not authorized to create or change 'bobCo/data/alpha'",
      "path": [
        "createPublication"
      ]
    }
  ]
}
